Implemented an option to simplify an itinerary track
Added a `goto page` option to all paging controls.  The `goto page` option is
only shown once there are at least 10 pages.

- Format numerical values with commas on `System Status` page.
- Update `nodemon` package to newer version.

--- a/app/index-async.html
+++ b/app/index-async.html
@@ -62,7 +62,7 @@
       'node_modules/angular-validation-match/dist/angular-validation-match.min.js',
       'node_modules/angular-animate/angular-animate.min.js',
       'node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js',
-      'node_modules/socket.io-client/dist/socket.io.js',
+      'node_modules/socket.io-client/dist/socket.io.min.js',
       'node_modules/angular-socket-io/socket.min.js',
       'node_modules/angular-file-saver/dist/angular-file-saver.bundle.min.js',
       'node_modules/angular-bootstrap-confirm/dist/angular-bootstrap-confirm.min.js',
@@ -77,6 +77,7 @@
       'js/coord-filter.js',
       'js/admin-password-reset-controller.js',
       'js/config-factory.js',
+      'js/paging/gotopage-directive.js',
       'js/itineraries-controller.js',
       'js/itinerary-controller.js',
       'js/itinerary-import-controller.js',
@@ -92,6 +93,7 @@
       'js/itinerary-route-name-controller.js',
       'js/itinerary-route-edit-controller.js',
       'js/itinerary-route-join-controller.js',
+      'js/itinerary-simplify-path-controller.js',
       'js/itinerary-track-name-controller.js',
       'js/itinerary-track-edit-controller.js',
       'js/itinerary-track-segment-edit-controller.js',
@@ -100,6 +102,8 @@
       'js/map-controller.js',
       'js/map-point-controller.js',
       'js/shares-controller.js',
+      'js/simplify/simplify.js',
+      'js/simplify/angular-simplify-js.js',
       'js/socket-factory.js',
       'js/state-service.js',
       'js/storage-factory.js',
