--- a/app/index.html
+++ b/app/index.html
@@ -95,7 +95,7 @@
   <script src="node_modules/angular-validation-match/dist/angular-validation-match.min.js"></script>
   <script src="node_modules/angular-animate/angular-animate.min.js"></script>
   <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
-  <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
+  <script src="node_modules/socket.io-client/dist/socket.io.min.js"></script>
   <script src="node_modules/angular-socket-io/socket.min.js"></script>
   <script src="node_modules/angular-file-saver/dist/angular-file-saver.bundle.min.js"></script>
   <script src="node_modules/angular-bootstrap-confirm/dist/angular-bootstrap-confirm.min.js"></script>
@@ -110,6 +110,7 @@
   <script src="js/coord-filter.js"></script>
   <script src="js/admin-password-reset-controller.js"></script>
   <script src="js/config-factory.js"></script>
+  <script src="js/paging/gotopage-directive.js"></script>
   <script src="js/itineraries-controller.js"></script>
   <script src="js/itinerary-controller.js"></script>
   <script src="js/itinerary-import-controller.js"></script>
@@ -125,6 +126,7 @@
   <script src="js/itinerary-route-name-controller.js"></script>
   <script src="js/itinerary-route-edit-controller.js"></script>
   <script src="js/itinerary-route-join-controller.js"></script>
+  <script src="js/itinerary-simplify-path-controller.js"></script>
   <script src="js/itinerary-track-name-controller.js"></script>
   <script src="js/itinerary-track-edit-controller.js"></script>
   <script src="js/itinerary-track-segment-edit-controller.js"></script>
@@ -133,6 +135,8 @@
   <script src="js/map-controller.js"></script>
   <script src="js/map-point-controller.js"></script>
   <script src="js/shares-controller.js"></script>
+  <script src="js/simplify/simplify.js"></script>
+  <script src="js/simplify/angular-simplify-js.js"></script>
   <script src="js/socket-factory.js"></script>
   <script src="js/state-service.js"></script>
   <script src="js/storage-factory.js"></script>
